fixed logo not being clickable z-index position issue.

--- a/src/Logo.css
+++ b/src/Logo.css
@@ -4,4 +4,5 @@
   position: fixed;
   top: 30px;
   left: 50px;
+  z-index: 1000;
 }
